--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "firebase": "^10.8.1",
+    "firebase-admin": "^12.0.0",
     "multer": "^1.4.5-lts.1"
   }
 }
